added th rows in test_cases dox. fixed broken link. added pre tags to all.

--- a/dox/Test_Cases_SP3/TC36_nopEntExt.dox
+++ b/dox/Test_Cases_SP3/TC36_nopEntExt.dox
@@ -1,11 +1,24 @@
 /*!
 
 \page testcase36 Valid Ext Address Arith
-<h1>Linking Phase: Combined Symbol Table</h1>
+<h1>Linker Load Phase</h1>
 
-label: lbl3	Original Address: 2	Offset: 0	Adjusted Address: 2
-label: lbl2	Original Address: 1	Offset: 0	Adjusted Address: 1
-label: lbl1	Original Address: 0	Offset: 0	Adjusted Address: 0
+<pre>justNop
+H:justNop:0:1:0:2012149,15:14:34:1:URBAN-ASM:justNop:
+T:0:F4000000:A:A:0:0:justNop:
+E:3:0:1:0:justNop:
+
+entLabels
+H:entLabels:0:3:0:2012149,14:52:49:1:URBAN-ASM:entLabels:
+L:lbl1:0:entLabels:
+L:lbl2:1:entLabels:
+L:lbl3:2:entLabels:
+T:0:00000000:A:A:0:0:entLabels:
+T:1:00000001:A:A:0:0:entLabels:
+T:2:00000002:A:A:0:0:entLabels:
+E:8:3:3:0:entLabels:
+
+extUse
 H:extUse:0:4:0:2012149,15:00:12:1:URBAN-ASM:extUse:
 T:0:00800000:A:E:0:1:extUse:
 M:0:+:E:lbl3:S:extUse:
@@ -17,20 +30,27 @@ T:3:02000000:C:R:3:0:extUse:
 M:3:+:E:lbl3:-:E:lbl2:+:E:lbl1:H:extUse:
 E:10:0:4:4:extUse:
 
+</pre>
 
 <h1>Linking Phase: Combined Symbol Table</h1>
 
-label: lbl3	Original Address: 2	Offset: 0	Adjusted Address: 2
-label: lbl2	Original Address: 1	Offset: 0	Adjusted Address: 1
-label: lbl1	Original Address: 0	Offset: 0	Adjusted Address: 0
-H:justNop:0:1:0:2012149,15:14:34:1:URBAN-ASM:justNop:
-T:0:F4000000:A:A:0:0:justNop:
-E:3:0:1:0:justNop:
+<pre>label: lbl3	Original Address: 2	Offset: 1	Adjusted Address: 3
+label: lbl2	Original Address: 1	Offset: 1	Adjusted Address: 2
+label: lbl1	Original Address: 0	Offset: 1	Adjusted Address: 1
+</pre>
 
+<h2>Complete loader file</h2>
 
-<h1>Linking Phase: Combined Symbol Table</h1>
-
-label: lbl3	Original Address: 2	Offset: 0	Adjusted Address: 2
-label: lbl2	Original Address: 1	Offset: 0	Adjusted Address: 1
-label: lbl1	Original Address: 0	Offset: 0	Adjusted Address: 0
+<pre>H:justNop:
+0000:0000:0008:2012149,15:14:34:URBAN-LLM:0001:justNop:
+T:0000:F4000000:justNop:
+T:0001:00000000:justNop:
+T:0002:00000001:justNop:
+T:0003:00000002:justNop:
+T:0004:00800003:justNop:
+T:0005:00810003:justNop:
+T:0006:00820004:justNop:
+T:0007:02002004:justNop:
+E:000A:0008:justNop:
+</pre>
 */
