--- a/dox/Test_Cases_SP3/TC39_ErrExeStart1.dox
+++ b/dox/Test_Cases_SP3/TC39_ErrExeStart1.dox
@@ -2,7 +2,7 @@
 
 \page testcase39 Invalid Execution Start 1
 <h1>Linker Load Phase</h1>
-
+<pre>
 altExe
 H:altExe:0:0:10:2012149,14:54:19:1:URBAN-ASM:altExe:
 705: invalid execution start address.[EUUP:0]
@@ -11,16 +11,17 @@ justNop
 H:justNop:0:1:0:2012149,15:14:34:1:URBAN-ASM:justNop:
 T:0:F4000000:A:A:0:0:justNop:
 E:3:0:1:0:justNop:
-
+</pre>
 
 
 <h1>Linking Phase: Combined Symbol Table</h1>
-
+<pre>
 <i>&lt;The combined symbol table is empty.&gt;</i>
-
+</pre>
 <h2>Isolated Linker Errors</h2>
+<pre>
 <span color="red">705: invalid execution start address.[EUUP:0]</span>
-
+</pre>
 <h2>Complete loader file</h2>
 
 <pre></pre>
