--- a/dox/Test_Cases_SP3/TC40_ErrExeStart2.dox
+++ b/dox/Test_Cases_SP3/TC40_ErrExeStart2.dox
@@ -2,7 +2,7 @@
 
 \page testcase40 Invalid Execution Start 2
 <h1>Linker Load Phase</h1>
-
+<pre>
 offExeStart
 H:offExeStart:10:0:0:2012149,16:01:26:1:URBAN-ASM:offExeStart:
 705: invalid execution start address.[EUUP:0]
@@ -12,16 +12,17 @@ offStart
 H:offStart:100:1:100:2012149,14:54:44:1:URBAN-ASM:offStart:
 T:100:F4000000:A:A:0:0:offStart:
 E:3:0:1:0:offStart:
-
+</pre>
 
 
 <h1>Linking Phase: Combined Symbol Table</h1>
-
+<pre>
 <i>&lt;The combined symbol table is empty.&gt;</i>
-
+</pre>
 <h2>Isolated Linker Errors</h2>
+<pre>
 <span color="red">705: invalid execution start address.[EUUP:0]</span>
-
+</pre>
 <h2>Complete loader file</h2>
 
 <pre></pre>
