--- a/dox/Test_Cases_SP3/TC43_ErrNoLbl.dox
+++ b/dox/Test_Cases_SP3/TC43_ErrNoLbl.dox
@@ -1,8 +1,8 @@
 /*!
 
-\page testcase42 No Label
+\page testcase43 No Label
 <h1>Linker Load Phase</h1>
-
+<pre>
 extUse
 H:extUse:0:4:0:2012149,15:00:12:1:URBAN-ASM:extUse:
 T:0:00800000:A:E:0:1:extUse:
@@ -23,16 +23,17 @@ M:3:+:E:lbl3:-:E:lbl2:+:E:lbl1:H:extUse:
 700: No corresponding linker record for label, lbl2.
 700: No corresponding linker record for label, lbl1.
 E:10:0:4:4:extUse:
-
+</pre>
 
 
 <h1>Linking Phase: Combined Symbol Table</h1>
-
+<pre>
 <i>&lt;The combined symbol table is empty.&gt;</i>
-
+</pre>
 <h2>Isolated Linker Errors</h2>
+<pre>
 <span color="red">700: No corresponding linker record for label, lbl3.</span><span color="red">700: No corresponding linker record for label, lbl1.</span><span color="red">700: No corresponding linker record for label, lbl2.</span><span color="red">700: No corresponding linker record for label, lbl3.</span><span color="red">700: No corresponding linker record for label, lbl1.</span><span color="red">700: No corresponding linker record for label, lbl2.</span><span color="red">700: No corresponding linker record for label, lbl3.</span><span color="red">700: No corresponding linker record for label, lbl2.</span><span color="red">700: No corresponding linker record for label, lbl1.</span>
-
+</pre>
 <h2>Complete loader file</h2>
 
 <pre>H:extUse:
