small spelling mistake... :P ...

--- a/dox/Test_Cases_SP3/TC45_InvHeadSymb.dox
+++ b/dox/Test_Cases_SP3/TC45_InvHeadSymb.dox
@@ -1,6 +1,6 @@
 /*!
  
-\page testcase45 Invalid Header Reord symbol
+\page testcase45 Invalid Header Record symbol
 <h1>Linker Load Phase</h1>
 <h2>Object Files</h2>
 <pre>
