Memory dump div now uses a CSS class

--- a/dox/Test_Cases_SP4/TC51_99bottles.dox
+++ b/dox/Test_Cases_SP4/TC51_99bottles.dox
@@ -68,7 +68,7 @@ LC	Object Code	Address Status	Line Num	Source Line
 </pre>
 <h2>Object File</h2>
 <pre>H:the99bottlessong:
-0000:0026:0000:2012151,01:01:50:0001:URBAN-ASM:the99bottlessong:
+0000:0026:0000:2012151,01:12:48:0001:URBAN-ASM:the99bottlessong:
 T:0000:01800063:A:A:00:00:the99bottlessong:
 T:0001:E1D80002253020626F74746C6573206F662062656572206F6E207468652077616C6C2C20253020626F74746C6573206F6620626565723B20:A:A:00:00:the99bottlessong:
 T:000F:E188001054616B65206F6E6520646F776E2C20706173732069742061726F756E643B2020:A:A:00:00:the99bottlessong:
@@ -84,7 +84,7 @@ E:000A:0000:0008:0000:the99bottlessong:
 <h1>Linker Load Phase</h1>
 
 <pre>the99bottlessong
-H:the99bottlessong:0:38:0:2012151,01:01:50:1:URBAN-ASM:the99bottlessong:
+H:the99bottlessong:0:38:0:2012151,01:12:48:1:URBAN-ASM:the99bottlessong:
 T:0:01800063:A:A:0:0:the99bottlessong:
 T:1:E1D80002253020626F74746C6573206F662062656572206F6E207468652077616C6C2C20253020626F74746C6573206F6620626565723B20:A:A:0:0:the99bottlessong:
 T:15:E188001054616B65206F6E6520646F776E2C20706173732069742061726F756E643B2020:A:A:0:0:the99bottlessong:
@@ -104,7 +104,7 @@ E:10:0:8:0:the99bottlessong:
 <h2>Complete loader file</h2>
 
 <pre>H:the99bottlessong:
-0000:0000:0026:2012151,01:01:50:URBAN-LLM:0001:the99bottlessong:
+0000:0000:0026:2012151,01:12:48:URBAN-LLM:0001:the99bottlessong:
 T:0000:01800063:the99bottlessong:
 T:0001:E1D80002253020626F74746C6573206F662062656572206F6E207468652077616C6C2C20253020626F74746C6573206F6620626565723B20:the99bottlessong:
 T:000F:E188001054616B65206F6E6520646F776E2C20706173732069742061726F756E643B2020:the99bottlessong:
@@ -118,7 +118,7 @@ E:000A:0008:the99bottlessong:
 
 <h1>Simulator Output</h1>
 
-<pre>======== Program Name: the99bottlessong ========</pre><pre>H:the99bottlessong:0:0:38:2012151,01:01:50:URBAN-LLM:1:the99bottlessong:
+<pre>======== Program Name: the99bottlessong ========</pre><pre>H:the99bottlessong:0:0:38:2012151,01:12:48:URBAN-LLM:1:the99bottlessong:
 T:0:01800063:the99bottlessong:
 T:1:E1D80002253020626F74746C6573206F662062656572206F6E207468652077616C6C2C20253020626F74746C6573206F6620626565723B20:the99bottlessong:
 T:15:E188001054616B65206F6E6520646F776E2C20706173732069742061726F756E643B2020:the99bottlessong:
@@ -128,7 +128,7 @@ T:34:88080001:the99bottlessong:
 T:35:E11800243A282020:the99bottlessong:
 T:37:FD880000:the99bottlessong:
 </pre><pre>E:10:8:the99bottlessong:
-</pre><pre>Loaded file.</pre><h2>Initial Machine Dump</h2><pre style="width:75%; height: 256px; overflow: auto; white-space:pre;">LC 0  WORD=00000000
+</pre><pre>Loaded file.</pre><h2>Initial Machine Dump</h2><pre class="MemoryDumpPre">LC 0  WORD=00000000
 R0=00000000 R1=00000000 R2=00000000 R3=00000000
 R4=00000000 R5=00000000 R6=00000000 R7=00000000
 XR1=00000000 XR2=00000000 XR3=00000000 XR4=00000000
@@ -943,7 +943,7 @@ XR5=00000000 XR6=00000000 XR7=00000000<br>
 </pre><pre>Take one down, pass it around;  
 </pre><pre>0 bottles of beer on the wall! 
 </pre><pre>:(  
-</pre><pre>0</pre><h2>Final Machine Dump</h2><pre style="width:75%; height: 256px; overflow: auto; white-space:pre;">LC 38  WORD=FD880000
+</pre><pre>0</pre><h2>Final Machine Dump</h2><pre class="MemoryDumpPre">LC 38  WORD=FD880000
 R0=00000000 R1=00000000 R2=00000000 R3=00000000
 R4=00000000 R5=00000000 R6=00000000 R7=00000000
 XR1=00000000 XR2=00000000 XR3=00000000 XR4=00000000
