--- a/dox/test_cases.dox
+++ b/dox/test_cases.dox
@@ -269,6 +269,36 @@ Test cases used in the SP4 benchmark:
     <td>Josh</td>
     <td>Prints the lyrics to 99 Bottles.</td>
   </tr>
+  <tr>
+    <td>\subpage testcase52</td>
+    <td>Noah</td>
+    <td>Tests for correctness of trlk instruction.</td>
+  </tr>
+    <tr>
+    <td>\subpage testcase53</td>
+    <td>Noah</td>
+    <td>Tests for correctness of tr, treq, trgt instructions.</td>
+  </tr>
+    <tr>
+    <td>\subpage testcase54</td>
+    <td>Noah</td>
+    <td>Tests for correctness of trlt instruction.</td>
+  </tr>
+    <tr>
+    <td>\subpage testcase55</td>
+    <td>Noah</td>
+    <td>Tests for correctness of trdr instruction.</td>
+  </tr>
+    <tr>
+    <td>\subpage testcase56</td>
+    <td>Noah</td>
+    <td>Tests for correctness and overflow for pwr instruction.</td>
+  </tr>
+    <tr>
+    <td>\subpage testcase57</td>
+    <td>Noah</td>
+    <td>Tests for correctness of isrg instruction.</td>
+  </tr>
 </table>
 
 Test cases developed by third parties:
